--- a/DAS Markdown bestand.Rmd
+++ b/DAS Markdown bestand.Rmd
@@ -386,6 +386,9 @@ cookTSHmax <-max(sapply(cookTSH$subset, max))
 cookTSHmax
 cookTSHmin <- min(sapply(cookTSH$subset, min))
 cookTSHmin
+DensCookTSH <- density(cookTSH[["subset"]])
+plot(DensCookTSH, main = "Densityplot of Cooks Distance TSH", xlab = "TSH waarde (mU/L)")
+polygon(DensCookTSH, col="steelblue", border="lightblue")
 
 #bepalen referentieintervallen FT3 middels Cookmethode
 cookFT3 <- cook.outliers(TSH$FT3)
@@ -393,6 +396,9 @@ cookFT3max <- max(sapply(cookFT3$subset, max))
 cookFT3max
 cookFT3min <- min(sapply(cookFT3$subset, min))
 cookFT3min
+DensCookFT3 <- density(cookFT3[["subset"]], na.rm = TRUE)
+plot(DensCookFT3, main = "Densityplot of Cooks Distance FT3", xlab = "FT3 waarde (pmol/L)")
+polygon(DensCookFT3, col="steelblue", border="lightblue")
 
 #bepalen referentieintervallen FT4 middels Cookmethode
 cookFT4 <- cook.outliers(TSH$FT4)
@@ -400,6 +406,10 @@ cookFT4max <- max(sapply(cookFT4$subset, max))
 cookFT4max
 cookFT4min <- min(sapply(cookFT4$subset, min))
 cookFT4min
+DensCookFT4 <- density(cookFT4[["subset"]], na.rm = TRUE)
+plot(DensCookFT4, main = "Densityplot of Cooks Distance FT4", xlab = "FT4 waarde (pmol/L)")
+polygon(DensCookFT4, col="steelblue", border="lightblue")
+
 
 ```
 Horn methode.
@@ -410,6 +420,9 @@ hornTSHmax <- max(sapply(hornTSH$subset, max))
 hornTSHmax
 hornTSHmin <- min(sapply(hornTSH$subset, min))
 hornTSHmin
+DensHornTSH <- density(hornTSH[["subset"]])
+plot(DensHornTSH, main = "Densityplot of Horn TSH", xlab = "TSH waarde (mU/L)")
+polygon(DensHornTSH, col="steelblue", border="lightblue")
 
 #bepalen referentieintervallen FT3 middels Hornmethode
 hornFT3 <- horn.outliers(TSH$FT3)
@@ -417,6 +430,9 @@ hornFT3max <- max(sapply(hornFT3$subset, max, na.rm = TRUE))
 hornFT3max
 hornFT3min <- min(sapply(hornFT3$subset, min, na.rm = TRUE))
 hornFT3min
+DensHornFT3 <- density(hornFT3[["subset"]], na.rm = TRUE)
+plot(DensHornFT3, main = "Densityplot of Horn FT3", xlab = "FT3 waarde (pmol/L)")
+polygon(DensHornFT3, col="steelblue", border="lightblue")
 
 #bepalen referentieintervallen FT4 middels Hornmethode
 hornFT4 <- horn.outliers(TSH$FT4)
@@ -424,6 +440,9 @@ hornFT4max <-max(sapply(hornFT4$subset, max, na.rm = TRUE))
 hornFT4max
 hornFT4min <- min(sapply(hornFT4$subset, min, na.rm = TRUE))
 hornFT4min
+DensHornFT4 <- density(hornFT4[["subset"]], na.rm = TRUE)
+plot(DensHornFT4, main = "Densityplot of Horn FT4", xlab = "FT4 waarde (pmol/L)")
+polygon(DensHornFT4, col="steelblue", border="lightblue")
 
 
 ```                                          
